# SparseRandomModeDecomposition

./: README.md  data_acknowledgement.md  requirements.txt  setup.cfg  setup.py
data/: synthetic.ipynb
examples/: all_parameters.ipynb  discontinuous.ipynb  frequency_estimation.ipynb  gravitational.ipynb  minimal.ipynb  music.ipynb  visualization.ipynb
srmdpy/: __init__.py  constants.py  srmdpy.py  utils.py  visualization.py
