[metadata]
name = srmdpy
version = attr: srmdpy.__version__
author = Nicholas Richardson
author_email = njericha@uwaterloo.ca
description = A Python implimentation of Sparse Random Mode Decomposition
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/njericha/srmdpy
license = MIT

[options]
packages = srmdpy
install_requires =
    numpy >= 1.18.5, < 1.22.0
    spgl1 >= 0.0.2
    scikit-learn >= 1.0.2
    seaborn >= 0.11.2
    matplotlib >= 3.2.2
    scipy<1.8
python_requires = >= 3.7.7, < 4